examples/test/testpolicy8674.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8674
  namespace: namespace81
spec:
  podSelector:
    matchLabels:
      key17: value30
      key48: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value49
          key42: value14
      podSelector:
        matchLabels:
          key25: value11
          key6: value3
          key33: value33
